<resources>
    <string name="app_name">Verbumly</string>

    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>
    <string name="mailEt">E-mail</string>
    <string name="nameEt">Username</string>
    <string name="passEt">Password</string>
    <string name="dateTv">Date</string>
    <string name="changePasswordBtn">I forgot my password</string>


    <string name="myscoreTv">Max streak</string>
    <string name="scoreTv"> -- </string>
    <string name="uidTv"> -- </string>
    <string name="mailTv"> -- </string>
    <string name="nameTv"> -- </string>
    <string name="menuTv">MENU</string>
    <string name="playBtn">Play</string>
    <string name="scoreBtn">Stats</string>
    <string name="creditsBtn">Credits</string>
    <string name="logoutBtn">Log out</string>
    <!-- Popup -->
    <string name="popupWord">The word was: %1$s</string>
    <string name="popupPlayAgain">Play again</string>
    <string name="popupReturn">Return to menu</string>
    <string name="levelSelectionLength">Select the length of the word</string>

    <string name="leaderboardMaxStreak">Max streak: %1$d</string>

    <string name="creditsCastellet">Made in INS Castellet</string>
    <string name="creditsCreators">Made by\nJoel Ferrer &amp; Jan Pérez\n\nwith the collaboration of our classmates and teacher</string>
    <string name="donate_button">Buy me a pizza slice</string>
    <string name="return_to_menu">Return to menu</string>
    <string name="max_streak">Max Streak</string>
    <string name="gallery">Gallery</string>
    <string name="mail">Mail</string>
    <string name="plays">Plays</string>
    <string name="current_streak">Current Streak</string>
    <string name="update">Update</string>
    <string name="how_to_play">HOW TO PLAY: try to guess the hidden word! How? Try a word of the length you have choosen, if a letter is in the correct position it will turn cian. If the letter is in the word but not in the correct position it will turn orange. Have fun!</string>
</resources>